app/assets/stylesheets/plans.scss
// Place all the styles related to the plans controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/


@media print {

  .planner {

  }

  .print-hide {

  }

}


// Category boxes
.category {
  padding-bottom: 32px;
}
.bordered {
  border: 1px solid $medium-gray;
  padding: 15px 20px;
  padding-top: -15px;
}
// header
.main-header {
  font-size: 2.3em;
  font-weight: 600;
  display: inline;
}

.degree-info {
  .degree {
    font-family: $serif;
    font-size: 2.0em;
  }
  .registered-info {
    float: left;
    margin-left: 25px;
  }
  .graduating-info {
    float: left;
    line-height: 3.4em;
    .graduating {
      font-family: $serif;
      font-size: 1.8em;
    }
  }
  .registration-confirmation {
    font-size: 1em;
  }
  .main-info {
    margin-top: 14px;
  }
  .additional-info {
    display: inline-block;
    margin-top: 8px;
  }
}


// Section/Panel on page
.course-section {
  margin-bottom: 25px;
  background: #fff;
  h3 {
    margin-top: 5px;
  }
  .required-units {
    position: absolute;
    bottom: 0;
    right: 20px;
    -webkit-transform: translateY(50%);
    transform: translateY(50%);
    padding: .4em .7em;
    background-color: #555;
    color: #fff;
    -webkit-font-smoothing: antialiased;
  }
  .add-course-link {
    margin-top: 5px;
  }
  .bold-header {
    font-weight: 600;
    font-size: 18px;
  }
}
.course-row {
  td {
    padding: 5px;
    vertical-align: top;
  }
  .completed-course {
    color: #6FC44A;
    text-decoration: line-through;
    font-style: italic;
  }
  .scheduled-course {
    color: #94CF87;
  }
}

// Category boxes
.category {
  position: relative;
  .units {
    font-size: 1.2em;
  }
  .category-info {
    margin: 5px 0;
  }
}

.degree-edit {
  .category {
    padding-bottom: 26px;
    padding-top: 0;
    margin-bottom: 44px;;
    h3 {
      padding: 0 5px;
      margin: 0;
      display: inline-block;
      position: relative;
      top: -13px;
      background-color: #FFF;
      font-size: 1.4em;
    }
  }
}

.green-border {
  border: 3px solid #65804C;
}
.green-highlight {
  background-color: rgba(101,128,76,0.2);
}

.full-width {
  width: 100%;
}

.upper-right {
  float: right;
  font-size: 1em;
  line-height: 1.4em;
}

